# slavik_django

./: Dockerfile  README.md  pyproject.toml  requirements.txt
slavik_test/: manage.py
slavik_test/slavik_test/: asgi.py  settings.py  urls.py  wsgi.py
slavik_test/twitter/: forms.py  models.py  urls.py  views.py
slavik_test/twitter/templates/: twitter.html
slavik_test/twitter/twitter_service/: main.py
slavik_test/twitter/twitter_service/models/: twitter_user.py
