[tool.poetry]
name = "slavik_test"
version = "0.1.0"
description = ""
authors = ["kozorukov <kosorukov.r@numdes.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1"
twython = "^3.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
